<<<<<<< HEAD
<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="PlaceHolder_VALUE">Value</string>
    <string name="SETTINGS_Advanced">Advanced</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="themes_description">Customize the looks to your liking. More themes will be available in the future.</string>
    <string name="lockdown_description">Disable your phone\'s system while performing calculations. We don\'t want you getting distracted.</string>
    <string name="widget_description">Be able to do your calculations from within your homescreen or lockscreen with this simple widget!</string>
    <string name="popup_description">Multitask with a pop up version of the application. It is resizable and allows you to open multiple sessions.</string>
    <string name="graphing_description">Unleash the power of graphing with this plugin! Advanced math has never been easier. </string>
    <string name="MANAGE_Description">Simply tap on a plugin and touch the \"Activate\" button to enable it. More are coming soon!\n\nTip: Enabling a plugin unlocks new settings</string>
    <string name="LOCKDOWN_Intro">Select the amount of time for which you wish to lockdown your phone during calculator use. \n\nUse hours and minutes respectively.</string>
    <string name="start">Start</string>
    <string name="intro_skip">SKIP</string>
    <string name="intro_next">NEXT</string>
    <string name="intro_devs">Developed by</string>
    <string name="intro_developers">Pkmmte Xeleon &amp; Jerry Moran</string>
    <string name="intro_subtitle">A highly customizable calculator.</string>
    <string name="intro_title3">Themes &amp; Lockdown</string>
    <string name="intro_title4">Widget &amp; Pop Up</string>
    <string name="intro_title2">Plugins &amp; Settings</string>
    <string name="plugin_description">Various plugins are available for you to use. These include widgets, lockdown, popup calculator, graphing, and themes.</string>
    <string name="settings_description">You are in control of what is enabled or disabled. This is your personal calculator, afterwall. Change it to your liking.</string>
    <string name="intro_finish">FINISH</string>
    <string name="debug_cleardata">Clear Data</string>
    <string name="debug_forcestop">Force Stop</string>
    <string name="debug_reset">Reset</string>
    <string name="debug_values">Variable Values</string>
    <string name="plus">+</string>
    <string name="minus">\u2212</string>
    <string name="divide">\u00f7</string>
    <string name="multiply">\u00d7</string>
    <string name="leftPar">\u0028</string>
    <string name="rightPar">\u0029</string>

=======
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="PlaceHolder_VALUE">Value</string>
    <string name="SETTINGS_Advanced">Advanced</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="themes_description">Customize the looks to your liking. More themes will be available in the future.</string>
    <string name="lockdown_description">Disable your phone\'s system while performing calculations. We don\'t want you getting distracted.</string>
    <string name="widget_description">Be able to do your calculations from within your homescreen or lockscreen with this simple widget!</string>
    <string name="popup_description">Multitask with a pop up version of the application. It is resizable and allows you to open multiple sessions.</string>
    <string name="graphing_description">Unleash the power of graphing with this plugin! Advanced math has never been easier. </string>
    <string name="MANAGE_Description">Simply tap on a plugin and touch the \"Activate\" button to enable it. More are coming soon!\n\nTip: Enabling a plugin unlocks new settings</string>
    <string name="LOCKDOWN_Intro">Select the amount of time for which you wish to lockdown your phone during calculator use. \n\nUse hours and minutes respectively.</string>
    <string name="start">Start</string>
    <string name="intro_skip">SKIP</string>
    <string name="intro_next">NEXT</string>
    <string name="intro_devs">Developed by</string>
    <string name="intro_developers">Pkmmte Xeleon &amp; Jerry Moran</string>
    <string name="intro_subtitle">A highly customizable calculator.</string>
    <string name="intro_title3">Themes &amp; Lockdown</string>
    <string name="intro_title4">Widget &amp; Pop Up</string>
    <string name="intro_title2">Plugins &amp; Settings</string>
    <string name="plugin_description">Various plugins are available for you to use. These include widgets, lockdown, popup calculator, graphing, and themes.</string>
    <string name="settings_description">You are in control of what is enabled or disabled. This is your personal calculator, afterwall. Change it to your liking.</string>
    <string name="intro_finish">FINISH</string>
    <string name="debug_cleardata">Clear Data</string>
    <string name="debug_forcestop">Force Stop</string>
    <string name="debug_reset">Reset</string>
    <string name="debug_values">Variable Values</string>
    <string name="plus">+</string>
    <string name="minus">\u2212</string>
    <string name="divide">\u00f7</string>
    <string name="multiply">\u00d7</string>
    <string name="leftPar">\u0028</string>
    <string name="rightPar">\u0029</string>

>>>>>>> 0417dc9254b0ec8a76a0fe897759bc860e26c2fa
=======
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="PlaceHolder_VALUE">Value</string>
    <string name="SETTINGS_Advanced">Advanced</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="themes_description">Customize the looks to your liking. More themes will be available in the future.</string>
    <string name="lockdown_description">Disable your phone\'s system while performing calculations. We don\'t want you getting distracted.</string>
    <string name="widget_description">Be able to do your calculations from within your homescreen or lockscreen with this simple widget!</string>
    <string name="popup_description">Multitask with a pop up version of the application. It is resizable and allows you to open multiple sessions.</string>
    <string name="graphing_description">Unleash the power of graphing with this plugin! Advanced math has never been easier. </string>
    <string name="MANAGE_Description">Simply tap on a plugin and touch the \"Activate\" button to enable it. More are coming soon!\n\nTip: Enabling a plugin unlocks new settings</string>
    <string name="LOCKDOWN_Intro">Select the amount of time for which you wish to lockdown your phone during calculator use. \n\nUse hours and minutes respectively.</string>
    <string name="start">Start</string>
    <string name="intro_skip">SKIP</string>
    <string name="intro_next">NEXT</string>
    <string name="intro_devs">Developed by</string>
    <string name="intro_developers">Pkmmte Xeleon &amp; Jerry Moran</string>
    <string name="intro_subtitle">A highly customizable calculator.</string>
    <string name="intro_title3">Themes &amp; Lockdown</string>
    <string name="intro_title4">Widget &amp; Pop Up</string>
    <string name="intro_title2">Plugins &amp; Settings</string>
    <string name="plugin_description">Various plugins are available for you to use. These include widgets, lockdown, popup calculator, graphing, and themes.</string>
    <string name="settings_description">You are in control of what is enabled or disabled. This is your personal calculator, afterwall. Change it to your liking.</string>
    <string name="intro_finish">FINISH</string>
    <string name="debug_cleardata">Clear Data</string>
    <string name="debug_forcestop">Force Stop</string>
    <string name="debug_reset">Reset</string>
    <string name="debug_values">Variable Values</string>
    <string name="plus">+</string>
    <string name="minus">\u2212</string>
    <string name="divide">\u00f7</string>
    <string name="multiply">\u00d7</string>
    <string name="leftPar">\u0028</string>
    <string name="rightPar">\u0029</string>
    <string name="theme1_description">Default Holo Theme\n\nVisually appealing yet simplistic. This is the Android\'s default theme currently. </string>
    <string name="theme2_description">Google Now Theme\n\nIt doesn\'t get simpler than this. Extremely minimal yet beautiful, this theme was brought to you by Google Now. </string>
    <string name="theme3_description">Touchwiz Theme\n\nThe exact same look as Samsung\s stock calculator app. </string>
    <string name="theme4_description">Red Theme\n\nA red version of the default holo theme. </string>
    <string name="theme5_description">Light Blue Theme\n\nA light blue version of the default holo theme. </string>

>>>>>>> adfd9dbbffa5abedbb83b43928fbf95815ca35d2
</resources>